objects/LogConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to manage the custom logging using Logger framework</description>
    <fields>
        <fullName>Debug_Record_Type__c</fullName>
        <description>This is the name of the record type which is used to present debug information on the log object.</description>
        <label>Debug Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Record_Type__c</fullName>
        <description>This is the name of the record type which is used to present exception information on the log object</description>
        <label>Exception Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag to denote if exceptions should be logged to the database</description>
        <label>Exceptions Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logging_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag to denote if debuf information should be logged to the database</description>
        <label>Logging Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>LogConfig</label>
</CustomObject>